# imgproc_cpp

./: .gitignore  CMakeLists.txt  README.md  test.py
include/: color.h  functions.h  mcbr.h  morphology.h
src/: color.cpp  functions.cpp  main.cpp  mcbr.cpp  morphology.cpp
